generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model WorkspaceUser {
  id                Int                      @id @default(autoincrement())
  tenantId          String
  principalId       String
  azureSelection    AzureSelectionPreference?
  mcpServerProfiles WorkspaceMcpServerProfile[]
  skillRegistryProfiles WorkspaceSkillRegistryProfile[]
  skillProfiles     WorkspaceSkillProfile[]
  threads           Thread[]

  @@unique([tenantId, principalId])
}

model AzureSelectionPreference {
  id                    Int           @id @default(autoincrement())
  userId                Int           @unique
  projectId             String        @default("")
  deploymentName        String        @default("")
  utilityProjectId      String        @default("")
  utilityDeploymentName String        @default("")
  utilityReasoningEffort String       @default("high")
  user                  WorkspaceUser @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model WorkspaceMcpServerProfile {
  id             String  @id
  userId         Int
  profileOrder   Int
  configKey      String
  name           String
  transport      String
  url            String?
  headersJson    String?
  useAzureAuth   Boolean @default(false)
  azureAuthScope String?
  timeoutSeconds Int?
  command        String?
  argsJson       String?
  cwd            String?
  envJson        String?
  user           WorkspaceUser @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, configKey])
  @@index([userId, profileOrder])
}

model Thread {
  id                    String             @id
  userId                Int
  name                  String
  createdAt             String
  updatedAt             String
  deletedAt             String?
  reasoningEffort       String             @default("none")
  webSearchEnabled      Boolean            @default(false)
  threadEnvironmentJson String             @default("{}")
  user                  WorkspaceUser      @relation(fields: [userId], references: [id], onDelete: Cascade)
  instruction           ThreadInstruction?
  messages              ThreadMessage[]
  mcpServers            ThreadMcpConnection[]
  mcpRpcLogs            ThreadOperationLog[]
  skillSelections       ThreadSkillActivation[]

  @@index([userId, updatedAt])
}

model ThreadSkillActivation {
  id             String @id
  threadId       String
  selectionOrder Int
  skillProfileId Int
  thread         Thread                @relation(fields: [threadId], references: [id], onDelete: Cascade)
  skillProfile   WorkspaceSkillProfile @relation(fields: [skillProfileId], references: [id], onDelete: Cascade)

  @@index([threadId, selectionOrder])
  @@index([skillProfileId])
}

model WorkspaceSkillRegistryProfile {
  id                   Int    @id @default(autoincrement())
  userId               Int
  registryId           String
  registryLabel        String
  registryDescription  String
  repository           String
  repositoryUrl        String
  sourcePath           String
  installDirectoryName String
  user                 WorkspaceUser         @relation(fields: [userId], references: [id], onDelete: Cascade)
  skills               WorkspaceSkillProfile[]

  @@unique([userId, registryId])
  @@index([userId, registryId])
}

model WorkspaceSkillProfile {
  id                Int    @id @default(autoincrement())
  userId            Int
  registryProfileId Int?
  name              String
  location          String
  source            String
  user              WorkspaceUser                  @relation(fields: [userId], references: [id], onDelete: Cascade)
  registryProfile   WorkspaceSkillRegistryProfile? @relation(fields: [registryProfileId], references: [id], onDelete: SetNull)
  threadActivations ThreadSkillActivation[]
  messageActivations ThreadMessageSkillActivation[]

  @@unique([userId, location])
  @@index([userId, name])
  @@index([registryProfileId])
}

model ThreadInstruction {
  id       Int    @id @default(autoincrement())
  threadId String @unique
  content  String
  thread   Thread @relation(fields: [threadId], references: [id], onDelete: Cascade)
}

model ThreadMessage {
  id                          String @id
  threadId                    String
  conversationOrder           Int
  role                        String
  content                     String
  createdAt                   String
  turnId                      String
  attachmentsJson             String
  skillActivations            ThreadMessageSkillActivation[]
  thread                      Thread @relation(fields: [threadId], references: [id], onDelete: Cascade)

  @@index([threadId, conversationOrder])
}

model ThreadMessageSkillActivation {
  id             String @id
  messageId      String
  selectionOrder Int
  skillProfileId Int
  message        ThreadMessage         @relation(fields: [messageId], references: [id], onDelete: Cascade)
  skillProfile   WorkspaceSkillProfile @relation(fields: [skillProfileId], references: [id], onDelete: Cascade)

  @@index([messageId, selectionOrder])
  @@index([skillProfileId])
}

model ThreadMcpConnection {
  id             String  @id
  threadId       String
  selectionOrder Int
  name           String
  transport      String
  url            String?
  headersJson    String?
  useAzureAuth   Boolean @default(false)
  azureAuthScope String?
  timeoutSeconds Int?
  command        String?
  argsJson       String?
  cwd            String?
  envJson        String?
  thread         Thread  @relation(fields: [threadId], references: [id], onDelete: Cascade)

  @@index([threadId, selectionOrder])
}

model ThreadOperationLog {
  rowId          String  @id
  sourceRpcId    String
  threadId       String
  conversationOrder Int
  sequence       Int
  operationType  String  @default("mcp")
  serverName     String
  method         String
  startedAt      String
  completedAt    String
  requestJson    String
  responseJson   String
  isError        Boolean @default(false)
  turnId         String
  thread         Thread  @relation(fields: [threadId], references: [id], onDelete: Cascade)

  @@index([threadId, conversationOrder])
}

model RuntimeEventLog {
  id          String @id
  createdAt   String
  source      String
  level       String
  category    String
  eventName   String
  message     String
  errorName   String?
  location    String?
  action      String?
  statusCode  Int?
  httpMethod  String?
  httpPath    String?
  threadId    String?
  tenantId    String?
  principalId String?
  userId      Int?
  stack       String?
  contextJson String

  @@index([createdAt])
  @@index([level, createdAt])
  @@index([source, category, createdAt])
}

model SkillRegistryCache {
  cacheKey    String @id
  payloadJson String
  updatedAt   String
  expiresAt   String

  @@index([expiresAt])
}
